[gd_scene load_steps=10 format=3 uid="uid://cd6b75613o34u"]

[ext_resource type="Theme" uid="uid://cesgvqexxaqev" path="res://assets/windows_95_theme.tres" id="1_clvji"]
[ext_resource type="Texture2D" uid="uid://chka0bjnrrdmr" path="res://assets/ui/dark_purple_normal.png" id="2_opq6i"]
[ext_resource type="Script" uid="uid://dprwc8feasjw2" path="res://components/apps/minerr/crypto_card.gd" id="3_ixyll"]
[ext_resource type="Texture2D" uid="uid://chkl2i2bg50da" path="res://assets/mine.png" id="4_5wbke"]
[ext_resource type="Texture2D" uid="uid://cpph6qmmgf2p3" path="res://assets/ui/greenbuttonpressed.png" id="5_ixyll"]
[ext_resource type="Texture2D" uid="uid://ctlorutr8vm1m" path="res://assets/ui/greenbutton.png" id="6_5wbke"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_scfj1"]
texture = ExtResource("2_opq6i")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_blh88"]
texture = ExtResource("5_ixyll")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2knlv"]
texture = ExtResource("6_5wbke")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[node name="CryptoCard" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_clvji")
theme_override_styles/panel = SubResource("StyleBoxTexture_scfj1")
script = ExtResource("3_ixyll")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SymbolLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="DisplayNameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PriceLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BlockChanceLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BlockTimeLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BlockSizeLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MinerSprite" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("4_5wbke")

[node name="ClickBoostArea" type="TextureButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_5wbke")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(79.575, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="GPUsLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "GPUs: "

[node name="RemoveGPUButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
text = "-"

[node name="AddGPUButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
text = "+"

[node name="OverclockButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "Overclock"

[node name="UpgradeButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_styles/pressed = SubResource("StyleBoxTexture_blh88")
theme_override_styles/normal = SubResource("StyleBoxTexture_2knlv")
text = "Upgrade
"
